[gd_scene load_steps=7 format=3 uid="uid://cquh45w2fvd4x"]

[ext_resource type="Script" path="res://ui/load_game_menu/load_game_menu.gd" id="1_ixnqm"]
[ext_resource type="Texture2D" uid="uid://c46nfvbeeb3pr" path="res://ui/panel-border-027.png" id="2_ixnqm"]

[sub_resource type="Gradient" id="Gradient_yvnqw"]
offsets = PackedFloat32Array(0, 0.3, 0.7, 1)
colors = PackedColorArray(0.0627451, 0.0784314, 0.101961, 0.9, 0.0784314, 0.101961, 0.133333, 0.9, 0.101961, 0.133333, 0.164706, 0.9, 0.133333, 0.164706, 0.211765, 0.9)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yvnqw"]
gradient = SubResource("Gradient_yvnqw")
fill_to = Vector2(0, 1)
width = 1280
height = 720

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yvnqw"]
texture = ExtResource("2_ixnqm")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_yvnqw"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_yvnqw")

[node name="LoadGameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixnqm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_yvnqw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_font_sizes/font_size = 36
text = "Load Game"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yvnqw")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SlotContainer1" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveSlot1" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer1"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_colors/font_hover_color = Color(0.4, 0.65, 0.85, 1)
theme_override_colors/font_focus_color = Color(0.4, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 20
text = "Save Slot 1"

[node name="DeleteButton1" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer1"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_focus_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "X"

[node name="SlotContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveSlot2" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_colors/font_hover_color = Color(0.4, 0.65, 0.85, 1)
theme_override_colors/font_focus_color = Color(0.4, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 20
text = "Save Slot 2"

[node name="DeleteButton2" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_focus_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "X"

[node name="SlotContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveSlot3" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer3"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_colors/font_hover_color = Color(0.4, 0.65, 0.85, 1)
theme_override_colors/font_focus_color = Color(0.4, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 20
text = "Save Slot 3"

[node name="DeleteButton3" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer3"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_focus_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "X"

[node name="BackButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_colors/font_hover_color = Color(0.4, 0.65, 0.85, 1)
theme_override_colors/font_focus_color = Color(0.4, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer1/SaveSlot1" to="." method="_on_save_slot_1_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer1/DeleteButton1" to="." method="_on_delete_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer2/SaveSlot2" to="." method="_on_save_slot_2_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer2/DeleteButton2" to="." method="_on_delete_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer3/SaveSlot3" to="." method="_on_save_slot_3_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SlotContainer3/DeleteButton3" to="." method="_on_delete_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
